# To-Do_List

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: __init__.py
backend/: app.py
backend/config/: db_config.py
backend/database/: criacao_banco.sql  tables_script.sql
src/config/: db_config.py  db_test_config.py  tables_config.py
src/config/factorys/: db_factory.py
src/model/: AppError.py  DataError.py  LoginError.py  Usuario.py
src/repositorios/: UsuarioRepository.py
src/scripts/: clear_scripts.py  tables_scripts.py
src/services/: UsuarioService.py
test/databaseTest/: factory_test.py  teste_conection_test.py
test/modelTest/: Usuario_test.py
test/repositoryTest/: UsuarioRepository_test.py
