[project]
name = "to-do-list"
version = "0.1.0"
description = """Projeto simples de To-Do List para testar o meu conhecimento com desenvolvimento de sistemas 
utilizando flask"""
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
